# cop-cpp24-gtest

./: .gitignore  CMakeLists.txt  README.md  godbolt.txt
core/: CMakeLists.txt
core/abstract_test/consumer/: loop_factorial.h  recursive_factorial.h
core/basic/: adder.h  wrapper.h
core/death_test/: exiter.cpp  exiter.h
core/setup_teardown/: spy.h
core_test/: CMakeLists.txt  main.cpp
core_test/abstract_test/consumer/: actual_factorial_test.cpp
core_test/basic/: adder.cpp  suite.h  suite1.cpp  suite2.cpp  wrapper.cpp
core_test/death_test/: exiter.cpp
core_test/matchers/: interval.cpp  simple.cpp  tuple.cpp
core_test/setup_teardown/: spy.cpp
